--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>balbucio.org.ejsl</groupId>
     <artifactId>EssentialJSwingLibrary</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>v0.0.2</version>
 
     <properties>
         <maven.compiler.source>20</maven.compiler.source>
